Performance enhancements. Code has been demodularized for performance reasons and turn around time is reduced to 300 ms on average from 1.5 and 3.0 second.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
+##
+# Model directory files
+##
+
 *.pb
 *.pbtxt
 *.pyc
 imagenet_synset_to_human_label_map.txt
+*.tgz
+
+##
+# IntelliJ
+##
+
 .idea/
